// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`initial state renders "Other" without crashing 1`] = `
<section
  className="tooltip-container u-clearfix "
>
  <p
    className="a-micro-copy"
  >
    <span
      className="heading"
    >
      Date Range:
    </span>
    <span
      className="date"
    >
      1/1/1900 - 1/1/2000
    </span>
  </p>
  <div>
    <ul
      className="tooltip-ul"
    >
      <li
        className="color__1"
      >
        <span
          className="u-left a-btn a-btn__link"
          id="focus-foo"
          onClick={[Function]}
        >
          foo
        </span>
        <span
          className="u-right"
        >
          1,000
        </span>
      </li>
      <li
        className="color__2"
      >
        <span
          className="u-left a-btn a-btn__link"
          id="focus-bar"
          onClick={[Function]}
        >
          bar
        </span>
        <span
          className="u-right"
        >
          1,000
        </span>
      </li>
      <li
        className="color__3"
      >
        <span
          className="u-left a-btn a-btn__link"
          id="focus-allother"
          onClick={[Function]}
        >
          All other
        </span>
        <span
          className="u-right"
        >
          900
        </span>
      </li>
      <li
        className="color__4"
      >
        <span
          className="u-left a-btn a-btn__link"
          id="focus-eatatjoes"
          onClick={[Function]}
        >
          Eat at Joe's
        </span>
        <span
          className="u-right"
        >
          1,000
        </span>
      </li>
      <li
        className="color__5"
      >
        <span
          className="u-left"
        >
          All other 
        </span>
        <span
          className="u-right"
        >
          900
        </span>
      </li>
    </ul>
    <ul
      className="m-list__unstyled tooltip-ul total"
    >
      <li>
        <span
          className="u-left"
        >
          Total
        </span>
        <span
          className="u-right"
        >
          2,900
        </span>
      </li>
    </ul>
  </div>
</section>
`;

exports[`initial state renders Company typehead without crashing 1`] = `
<section
  className="tooltip-container u-clearfix "
>
  <section
    className="typeahead "
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      className="m-btn-inside-input input-contains-label"
    >
      <div
        className="input-contains-label_before input-contains-label_before__search"
      >
        <svg
          className="cf-icon-svg"
          viewBox="0 0 880.6 1200"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M860.1 879.2L645.7 664.8c90.8-136.8 76-323-44.6-443.5-137.5-137.5-360.5-137.5-498 0s-137.5 360.5 0 498c118.5 118.4 303.9 137 443.5 44.6L761 978.3c27.3 27.3 71.7 27.3 99 0s27.4-71.8.1-99.1zm-508-116.9C191.4 762 61.3 631.5 61.6 470.8c.3-160.7 130.8-290.8 291.5-290.5s290.8 130.8 290.5 291.5c-.2 118.2-71.9 224.6-181.5 269.1-34.9 14.2-72.3 21.5-110 21.4z"
          />
        </svg>
      </div>
      <label
        className="u-visually-hidden"
        htmlFor="company-typeahead"
      >
        Start typing to begin listing companies
      </label>
      <input
        autoComplete="off"
        className="a-text-input"
        id="company-typeahead"
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder="Enter company name"
        type="text"
        value=""
      />
    </div>
  </section>
  <p
    className="a-micro-copy"
  >
    <span
      className="heading"
    >
      Date Range:
    </span>
    <span
      className="date"
    >
      1/1/1900 - 1/1/2000
    </span>
  </p>
  <div>
    <ul
      className="tooltip-ul"
    >
      <li
        className="color__1"
      >
        <span
          className="u-left a-btn a-btn__link"
          id="focus-foo"
          onClick={[Function]}
        >
          foo
        </span>
        <span
          className="u-right a-btn a-btn__link close"
          onClick={[Function]}
        >
          <svg
            className="cf-icon-svg"
            viewBox="0 0 718.9 1200"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M451.4 613.7l248.1-248.1c25.6-25.1 26-66.3.8-91.9s-66.3-26-91.9-.8l-.8.8-248.1 248.1-248.1-248.1c-25.4-25.4-66.5-25.4-91.9 0s-25.4 66.5 0 91.9l248.1 248.1L19.5 861.8c-25.6 25.1-26 66.3-.8 91.9s66.3 26 91.9.8l.8-.8 248.1-248.1 248.1 248.1c25.4 25.4 66.5 25.4 91.9 0s25.4-66.5 0-91.9L451.4 613.7z"
            />
          </svg>
        </span>
        <span
          className="u-right"
        >
          1,000
        </span>
      </li>
      <li
        className="color__2"
      >
        <span
          className="u-left a-btn a-btn__link"
          id="focus-bar"
          onClick={[Function]}
        >
          bar
        </span>
        <span
          className="u-right a-btn a-btn__link close"
          onClick={[Function]}
        >
          <svg
            className="cf-icon-svg"
            viewBox="0 0 718.9 1200"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M451.4 613.7l248.1-248.1c25.6-25.1 26-66.3.8-91.9s-66.3-26-91.9-.8l-.8.8-248.1 248.1-248.1-248.1c-25.4-25.4-66.5-25.4-91.9 0s-25.4 66.5 0 91.9l248.1 248.1L19.5 861.8c-25.6 25.1-26 66.3-.8 91.9s66.3 26 91.9.8l.8-.8 248.1-248.1 248.1 248.1c25.4 25.4 66.5 25.4 91.9 0s25.4-66.5 0-91.9L451.4 613.7z"
            />
          </svg>
        </span>
        <span
          className="u-right"
        >
          1,000
        </span>
      </li>
      <li
        className="color__3"
      >
        <span
          className="u-left a-btn a-btn__link"
          id="focus-allother"
          onClick={[Function]}
        >
          All other
        </span>
        <span
          className="u-right a-btn a-btn__link close"
          onClick={[Function]}
        >
          <svg
            className="cf-icon-svg"
            viewBox="0 0 718.9 1200"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M451.4 613.7l248.1-248.1c25.6-25.1 26-66.3.8-91.9s-66.3-26-91.9-.8l-.8.8-248.1 248.1-248.1-248.1c-25.4-25.4-66.5-25.4-91.9 0s-25.4 66.5 0 91.9l248.1 248.1L19.5 861.8c-25.6 25.1-26 66.3-.8 91.9s66.3 26 91.9.8l.8-.8 248.1-248.1 248.1 248.1c25.4 25.4 66.5 25.4 91.9 0s25.4-66.5 0-91.9L451.4 613.7z"
            />
          </svg>
        </span>
        <span
          className="u-right"
        >
          900
        </span>
      </li>
      <li
        className="color__4"
      >
        <span
          className="u-left a-btn a-btn__link"
          id="focus-eatatjoes"
          onClick={[Function]}
        >
          Eat at Joe's
        </span>
        <span
          className="u-right a-btn a-btn__link close"
          onClick={[Function]}
        >
          <svg
            className="cf-icon-svg"
            viewBox="0 0 718.9 1200"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M451.4 613.7l248.1-248.1c25.6-25.1 26-66.3.8-91.9s-66.3-26-91.9-.8l-.8.8-248.1 248.1-248.1-248.1c-25.4-25.4-66.5-25.4-91.9 0s-25.4 66.5 0 91.9l248.1 248.1L19.5 861.8c-25.6 25.1-26 66.3-.8 91.9s66.3 26 91.9.8l.8-.8 248.1-248.1 248.1 248.1c25.4 25.4 66.5 25.4 91.9 0s25.4-66.5 0-91.9L451.4 613.7z"
            />
          </svg>
        </span>
        <span
          className="u-right"
        >
          1,000
        </span>
      </li>
    </ul>
    <ul
      className="m-list__unstyled tooltip-ul total"
    >
      <li>
        <span
          className="u-left"
        >
          Total
        </span>
        <span
          className="u-right"
        >
          2,900
        </span>
      </li>
    </ul>
  </div>
</section>
`;

exports[`initial state renders focus without crashing 1`] = `
<section
  className="tooltip-container u-clearfix focus"
>
  <p
    className="a-micro-copy"
  >
    <span
      className="heading"
    >
      Date Range:
    </span>
    <span
      className="date"
    >
      1/1/1900 - 1/1/2000
    </span>
  </p>
  <div>
    <ul
      className="tooltip-ul"
    >
      <li
        className="color__1"
      >
        <span
          className="u-left"
        >
          foo
        </span>
        <span
          className="u-right"
        >
          1,000
        </span>
      </li>
      <li
        className="color__2"
      >
        <span
          className="u-left"
        >
          bar
        </span>
        <span
          className="u-right"
        >
          1,000
        </span>
      </li>
      <li
        className="color__3"
      >
        <span
          className="u-left"
        >
          All other
        </span>
        <span
          className="u-right"
        >
          900
        </span>
      </li>
      <li
        className="color__4"
      >
        <span
          className="u-left"
        >
          Eat at Joe's
        </span>
        <span
          className="u-right"
        >
          1,000
        </span>
      </li>
    </ul>
    <ul
      className="m-list__unstyled tooltip-ul total"
    >
      <li>
        <span
          className="u-left"
        >
          Total
        </span>
        <span
          className="u-right"
        >
          2,900
        </span>
      </li>
    </ul>
  </div>
</section>
`;

exports[`initial state renders nothing without crashing 1`] = `null`;

exports[`initial state renders without crashing 1`] = `
<section
  className="tooltip-container u-clearfix "
>
  <p
    className="a-micro-copy"
  >
    <span
      className="heading"
    >
      Date Range:
    </span>
    <span
      className="date"
    >
      1/1/1900 - 1/1/2000
    </span>
  </p>
  <div>
    <ul
      className="tooltip-ul"
    >
      <li
        className="color__1"
      >
        <span
          className="u-left a-btn a-btn__link"
          id="focus-foo"
          onClick={[Function]}
        >
          foo
        </span>
        <span
          className="u-right"
        >
          1,000
        </span>
      </li>
      <li
        className="color__2"
      >
        <span
          className="u-left a-btn a-btn__link"
          id="focus-bar"
          onClick={[Function]}
        >
          bar
        </span>
        <span
          className="u-right"
        >
          1,000
        </span>
      </li>
      <li
        className="color__3"
      >
        <span
          className="u-left a-btn a-btn__link"
          id="focus-allother"
          onClick={[Function]}
        >
          All other
        </span>
        <span
          className="u-right"
        >
          900
        </span>
      </li>
      <li
        className="color__4"
      >
        <span
          className="u-left a-btn a-btn__link"
          id="focus-eatatjoes"
          onClick={[Function]}
        >
          Eat at Joe's
        </span>
        <span
          className="u-right"
        >
          1,000
        </span>
      </li>
    </ul>
    <ul
      className="m-list__unstyled tooltip-ul total"
    >
      <li>
        <span
          className="u-left"
        >
          Total
        </span>
        <span
          className="u-right"
        >
          2,900
        </span>
      </li>
    </ul>
  </div>
</section>
`;
